[package]
name = "rusty-poker-actixweb"
version = "0.1.0"
authors = ["Daniel Bider <bider.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
rusty-poker = { path = "../rusty-poker" }
chrono = "0.4.6"
log = "0.4.0"
env_logger = "0.6.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
