[package]
name = "rusty-poker"
version = "0.1.0"
authors = ["Daniel Bider <bider.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde", "time"] }
time = "0.1.42"
